# redis-ha

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-push.yml
common/: Cargo.toml
common/src/: config.rs  lib.rs  logging.rs  telemetry.rs
haproxy/: Cargo.toml  Dockerfile
haproxy/src/: config.rs  main.rs  monitoring.rs  nodes.rs  template.rs
redis-sentinel/: Cargo.toml  Dockerfile
redis-sentinel/src/: config.rs  health_server.rs  lib.rs  process_manager.rs  redis_conf.rs  sentinel_conf.rs
