[workspace]
resolver = "2"
members = [
    "common",
    "redis-sentinel",
    "haproxy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process", "time", "fs", "io-util", "signal", "net"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
nix = { version = "0.29", features = ["signal", "process"] }
axum = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
