[package]
name = "haproxy-entrypoint"
version.workspace = true
edition.workspace = true

[[bin]]
name = "haproxy-entrypoint"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
